CMAKE_MINIMUM_REQUIRED(VERSION 3.3.0 FATAL_ERROR)
PROJECT(utils)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

OPTION(DCHECK_ALWAYS_ON "Enable dcheck in release." OFF)

IF(DCHECK_ALWAYS_ON)
  ADD_DEFINITIONS(-DDCHECK_ALWAYS_ON)
ENDIF(DCHECK_ALWAYS_ON)

SET(HEADERS
  ${CMAKE_SOURCE_DIR}/src/utils/arg_reader.h
  ${CMAKE_SOURCE_DIR}/src/utils/arg_converter.h
  ${CMAKE_SOURCE_DIR}/src/utils/chunk_info.h
  ${CMAKE_SOURCE_DIR}/src/utils/m3u8_reader.h
  ${CMAKE_SOURCE_DIR}/src/utils/m3u8_writer.h
  ${CMAKE_SOURCE_DIR}/src/utils/utils.h
)

SET(SOURCES
  ${CMAKE_SOURCE_DIR}/src/utils/arg_reader.cpp
  ${CMAKE_SOURCE_DIR}/src/utils/arg_converter.cpp
  ${CMAKE_SOURCE_DIR}/src/utils/chunk_info.cpp
  ${CMAKE_SOURCE_DIR}/src/utils/m3u8_reader.cpp
  ${CMAKE_SOURCE_DIR}/src/utils/m3u8_writer.cpp
  ${CMAKE_SOURCE_DIR}/src/utils/utils.cpp
)

SET(UTILS_SOURCES ${HEADERS} ${SOURCES})
SET(UTILS_LIBRARIES ${COMMON_BASE_LIBRARY})
SET(INCLUDE_DIRECTORIES_UTILS
  ${INCLUDE_DIRECTORIES_UTILS}
  ${CMAKE_SOURCE_DIR}/src
)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${UTILS_SOURCES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${INCLUDE_DIRECTORIES_UTILS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${UTILS_LIBRARIES})

IF (DEVELOPER_CHECK_STYLE)
  SET(CHECK_SOURCES ${UTILS_SOURCES})
  REGISTER_CHECK_STYLE_TARGET(check_style_utils "${CHECK_SOURCES}")
  REGISTER_CHECK_INCLUDES_TARGET(${PROJECT_NAME})
ENDIF(DEVELOPER_CHECK_STYLE)

IF(DEVELOPER_ENABLE_TESTS)
  ADD_DEFINITIONS(-DPROJECT_TEST_SOURCES_DIR="${CMAKE_SOURCE_DIR}/tests")

  FIND_PACKAGE(GTest REQUIRED)
  SET(UTILS_UNIT_TEST "utils_unit_tests")
  SET(PRIVATE_INCLUDE_DIRECTORIES_UTILS_TESTS
    ${PRIVATE_INCLUDE_DIRECTORIES_UTILS_TESTS}
    ${CMAKE_SOURCE_DIR}/src
  )
  SET(UTILS_TESTS_LIBS ${PROJECT_NAME} ${GTEST_BOTH_LIBRARIES} pthread)
  ADD_EXECUTABLE(${UTILS_UNIT_TEST}
    ${CMAKE_SOURCE_DIR}/tests/utils/unit_test_utils.cpp
  )
  TARGET_INCLUDE_DIRECTORIES(${UTILS_UNIT_TEST} PRIVATE ${PRIVATE_INCLUDE_DIRECTORIES_UTILS_TESTS})
  TARGET_LINK_LIBRARIES(${UTILS_UNIT_TEST} ${UTILS_TESTS_LIBS})
  ADD_TEST_TARGET(${UTILS_UNIT_TEST})
  SET_PROPERTY(TARGET ${UTILS_UNIT_TEST} PROPERTY FOLDER "Utils unit tests")
ENDIF(DEVELOPER_ENABLE_TESTS)
