CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(iptv_cloud_service_license)

SET(CMAKE_CXX_STANDARD 11)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/../../../cmake")
INCLUDE("config")

SET(PRIVATE_INCLUDE_DIRECTORIES_LICENSE_GEN
  ${PRIVATE_INCLUDE_DIRECTORIES_LICENSE_GEN}
  ${CMAKE_SOURCE_DIR}/../..
  ${COMMON_INCLUDE_DIR}
)

SET(LICENSE_HEADERS gen_hardware_hash.h utils.h)
SET(LICENSE_SOURCES gen_hardware_hash.cpp utils.cpp)

FIND_PACKAGE(Common REQUIRED)

ADD_DEFINITIONS(-DPROJECT_NAME="${PROJECT_NAME}")
ADD_EXECUTABLE(${PROJECT_NAME}
  main.cpp
  ${LICENSE_HEADERS} ${LICENSE_SOURCES}
)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${PRIVATE_INCLUDE_DIRECTORIES_LICENSE_GEN})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} udev ${COMMON_LIBRARIES})
